alertmanager.yaml
# 2. Alertmanager Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: prom/alertmanager:v0.27.0
          args:
            - "--config.file=/etc/alertmanager/alertmanager.yml"
          ports:
            - name: web
              containerPort: 9093
          volumeMounts:
            - name: config-volume
              mountPath: /etc/alertmanager
      volumes:
        - name: config-volume
          configMap:
            name: alertmanager-config
---
# 3. Alertmanager Service
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  selector:
    app: alertmanager
  ports:
    - name: web
      port: 9093
      targetPort: 9093
      nodePort: 30093
  type: NodePort
---
# 4. Discord Adapter Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-discord
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-discord
  template:
    metadata:
      labels:
        app: alertmanager-discord
    spec:
      containers:
        - name: alertmanager-discord
          image: jertel/alertmanager-discord:latest
          ports:
            - containerPort: 9094
---
# 5. Discord Adapter Service
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-discord
  namespace: monitoring
spec:
  selector:
    app: alertmanager-discord
  ports:
    - port: 9094
      targetPort: 9094
  type: ClusterIP
